<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/title_activity_maps"
    app:startDestination="@id/startFragment">
    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.cupcake.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_startPointFragment"
            app:destination="@id/startPointFragment" />
    </fragment>
    <fragment
        android:id="@+id/startPointFragment"
        android:name="com.example.cupcake.StartPointFragment"
        android:label="@string/starting_point"
        tools:layout="@layout/fragment_start_point">
        <action
            android:id="@+id/action_startPointFragment_to_endPointFragment"
            app:destination="@id/endPointFragment" />
    </fragment>
    <fragment
        android:id="@+id/endPointFragment"
        android:name="com.example.cupcake.EndPointFragment"
        android:label="@string/destination_point"
        tools:layout="@layout/fragment_end_point">
        <action
            android:id="@+id/action_endPointFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.cupcake.MapsFragment"
        android:label="@string/title_activity_maps"
        tools:layout="@layout/fragment_maps" />
</navigation>