<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EndPointFragment">

    <data>
        <!-- Child tag of variable in data to bind data in ViewModel to layout -->
        <variable
            name="travelModel"
            type="com.example.cupcake.calculations.TravelFunctions" />

        <!-- Add layout variable and type for view of fragment -->
        <variable
            name="endPointFragment"
            type="com.example.cupcake.EndPointFragment" />
    </data>

    <!-- Contents of name, gender, and age -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin" >

            <!-- Enter starting location -->
            <TextView
                android:id="@+id/intro_label"
                android:textSize="@dimen/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_destination"
                android:layout_gravity="center" />

            <!-- Divider for spacing -->
            <View
                android:id="@+id/divider1"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/top_dimen"
                android:layout_marginBottom="@dimen/margin_between_elements" />

            <!-- Show in view the name -->
            <TextView
                android:id="@+id/name_label"
                android:textSize="@dimen/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"/>

            <!-- Show where to enter the name -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                tools:context=".ui.game.GameFragment">

                <!-- Input text here -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField"
                    style="@style/Widget.Unscramble.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:enabled="true"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:hint="@string/enter_area_or_city_name"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_label"
                    tools:ignore="NotSibling">

                    <!-- Textbox dimensions -->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_edit_text"
                        android:enabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName|textNoSuggestions"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Divider for spacing -->
            <View
                android:id="@+id/divider2"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/top_dimen"
                android:layout_marginBottom="@dimen/margin_between_elements" />

            <!-- Show in view the unit -->
            <TextView
                android:id="@+id/gender_label"
                android:textSize="@dimen/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_of_measurement"/>

            <!-- Pick unit -->
            <RadioGroup
                android:id="@+id/genderOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <!-- Metric -->
                <RadioButton
                    android:id="@+id/metric"
                    android:checked="true"
                    android:onClick="@{() -> travelModel.unit(@string/metric)}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metric" />

                <!-- Imperial -->
                <RadioButton
                    android:id="@+id/imperial"
                    android:onClick="@{() -> travelModel.unit(@string/imperial)}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imperial" />
            </RadioGroup>

            <!-- Divider for spacing -->
            <View
                android:id="@+id/divider3"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/div_height"
                android:layout_marginBottom="@dimen/margin_between_elements" />

            <!-- Find coordinates -->
            <Button
                android:id="@+id/findCoordinates"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/min_width"
                android:onClick="@{() -> endPointFragment.endCoords()}"
                android:text="@string/find_location" />

            <!-- Divider for spacing -->
            <View
                android:id="@+id/divider4"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/div_height"
                android:layout_marginBottom="@dimen/margin_between_elements" />

            <!-- Coordinates -->
            <TextView
                android:id="@+id/showCoord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@{travelModel.coordEnd}"
                tools:text="0"
                style="@style/ScoreText" />

            <!-- Divider for spacing -->
            <View
                android:id="@+id/divider5"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/div_height"
                android:layout_marginBottom="@dimen/margin_between_elements" />

            <!-- Distance there and back -->
            <TextView
                android:id="@+id/dist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@{travelModel.dist}"
                tools:text="0"
                style="@style/ScoreText" />

            <!-- Divider for spacing -->
            <View
                android:id="@+id/divider6"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/div_height"
                android:layout_marginBottom="@dimen/margin_between_elements" />

            <!-- Next button -->
            <Button
                android:id="@+id/viewMap"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/min_width"
                android:onClick="@{() -> endPointFragment.next()}"
                android:text="@string/view_on_map" />
        </LinearLayout>
    </ScrollView>
</layout>